stopped auto scroll overlap

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -202,10 +202,10 @@ body {
         
     }
 }
-.credits {
+.credits-page {
     position: relative;
     text-align: center;
-    height: 100%;
+    height: auto;
 
 }
 .character-select {
@@ -214,7 +214,7 @@ body {
     color: red;
     font-family: 'retro_gaming';
     width: 100%;
-    height: auto;
+    height: 50%;
 
 }
 .player {
